[gd_scene load_steps=13 format=2]

[ext_resource path="res://Other/Game_UI_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Other/Bubble_Particle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Entity/Rangefish.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Other/Visibilty_Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Character/Rangefish.gd" type="Script" id=5]
[ext_resource path="res://Audio/hitBlood.mp3" type="AudioStream" id=6]

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 11.9341, 0, 0, Vector2( 0.264045, 0.9875 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.30992, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.75
emission_shape = 2
emission_box_extents = Vector3( 15, 15, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 7.5
linear_accel_random = 1.0
radial_accel = 0.06
scale = 0.35
scale_random = 0.3
scale_curve = SubResource( 12 )
color = Color( 1, 1, 1, 0.784314 )

[sub_resource type="CircleShape2D" id=13]
radius = 445.001

[sub_resource type="CapsuleShape2D" id=11]
radius = 31.9999
height = 30.0001

[sub_resource type="CapsuleShape2D" id=2]
radius = 22.0
height = 16.0001

[node name="RangedFish" type="KinematicBody2D" groups=["collide"]]
light_mask = 3
collision_layer = 8
collision_mask = 8
script = ExtResource( 5 )

[node name="Visibilty_Box" parent="." instance=ExtResource( 4 )]
scale = Vector2( 30, 30 )

[node name="Particles2D" type="Particles2D" parent="."]
light_mask = 524290
rotation = 1.57079
z_index = -4
amount = 9
lifetime = 2.5
fixed_fps = 60
visibility_rect = Rect2( -1250, -1250, 2500, 2500 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
pause_mode = 1
light_mask = 524290
scale = Vector2( 0.0263574, 0.0263574 )
texture = ExtResource( 3 )

[node name="Player_Detection" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detection"]
shape = SubResource( 13 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="Hitbox_Box" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -13, 0 )
rotation = 1.5708
z_index = 20
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -14, 0 )
rotation = 1.5708
z_index = 6
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="Health_Bar" type="ProgressBar" parent="Node2D"]
light_mask = 0
margin_left = -36.0
margin_top = -40.0
margin_right = 35.0
margin_bottom = -26.0
theme = ExtResource( 1 )
value = 50.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
area_mask = 0

[connection signal="viewport_entered" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_entered"]
[connection signal="viewport_exited" from="Visibilty_Box" to="." method="_on_Visibilty_Box_viewport_exited"]
[connection signal="body_entered" from="Player_Detection" to="." method="_on_Player_Detection_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
